tests/baselines/reference/jsdocImportTypeNodeNamespace.errors.txt
Main.js(2,21): error TS2352: Conversion of type 'string' to type 'typeof _default' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== GeometryType.d.ts (0 errors) ====
    declare namespace _default {
      export const POINT: string;
    }
    export default _default;
    
==== Main.js (1 errors) ====
    export default function () {
      return /** @type {import('./GeometryType.js').default} */ ('Point');
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'string' to type 'typeof _default' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
    }
    